# os_labs

./: .gitignore  README.md  yoyo.xddd
cp/: CMakeLists.txt
cp/doc/: report.docx  total.docx
cp/src/: main.cpp  test1.json
lab1/: CMakeLists.txt  readme.md
lab1/doc/: report.docx
lab1/src/: child.c  parent.c
lab2/: CMakeLists.txt  readme.md
lab2/doc/: report.docx
lab2/src/: main.c
lab3/: CMakeLists.txt  readme.md
lab3/doc/: report.docx
lab3/src/: child.c  parent.c
lab4/: readme.md
lab4/doc/: report.docx
lab4/src/: GCF1.c  GCF2.c  Makefile  prog1.c  prog2.c  translation1.c  translation2.c
lab5-7/: CMakeLists.txt
lab5-7/doc/: report.docx
lab5-7/src/: CMakeLists.txt  bintree.cpp  bintree.hpp  client.cpp  main_unit.cpp  net_func.h  node.h  subunit.cpp  worker.cpp
lab8/doc/: report.docx
